--- a/react-complete-guide/src/App.css
+++ b/react-complete-guide/src/App.css
@@ -11,6 +11,25 @@
   border-right-color: #ccc;
   color: inherit;
 }
+.FilterTitle {
+  position: relative;
+  font-family: Verdana, Geneva, sans-serif;
+  margin: 10px 10px 10px 10px;
+  font-weight: bold;
+  font-size: 20px;
+}
+.FilterHeading {
+  position: relative;
+  font-family: Verdana, Geneva, sans-serif;
+  left: 1%;
+  margin: 10px 10px 10px 10px;
+}
+.ResetLink {
+  font-family: Verdana, Geneva, sans-serif;
+  float: right;
+  color: #17bae2;
+  padding: 5px;
+}
 .FilterHeading {
   position: relative;
   font-family: Verdana, Geneva, sans-serif;
@@ -76,7 +95,7 @@
   margin: 10px 10px 10px 10px;
   position: relative;
   border: 1px ridge;
-  width: 300px;
+  width: 250px;
   left: 100px;
   top: 100px;
 }
@@ -88,4 +107,32 @@
   width: 80%;
   background-color: #d1d1d1;
   
+}
+.App {
+  text-align: center;
+}
+
+.App-logo {
+  animation: App-logo-spin infinite 20s linear;
+  height: 80px;
+}
+
+.App-header {
+  background-color: #222;
+  height: 150px;
+  padding: 20px;
+  color: white;
+}
+
+.App-title {
+  font-size: 1.5em;
+}
+
+.App-intro {
+  font-size: large;
+}
+a { cursor: pointer; }
+@keyframes App-logo-spin {
+  from { transform: rotate(0deg); }
+  to { transform: rotate(360deg); }
 }
